<resources>
    <string name="app_name">Popular Movies</string>
    <string name="select_movie">Please select a movie from the list.</string>
    <string name="error_message">
        An error has occurred. Please try again by clicking REFRESH
    </string>
    <string name="release_header">Release Date: </string>
    <string name="vote_header">Rating: </string>
    <string name="overview_header">Synopsis:</string>
    <string name="LoremIpsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="trailer_header">Trailers:</string>
    <string name="review_header">Reviews:</string>
 // TODO Add your API Key here
    <string name="apiKey">fe976ceb4b88254d8c29d92f3d788889</string>
    <string name="image_base_url">http://image.tmdb.org/t/p/w500</string>
    <string name="no_internet">No Internet connection</string>
    <string name="no_movies">No Movies to display: Check Network Connection.</string>
    <string name="no_trailers">No Trailers to display: Check Network Connection.</string>
    <string name="no_reviews">No Reviews to display: Check Network Connection.</string>
    <string name="notification_update">Movie added to favorite</string>
    <string name="main_notification_channel_name">Primary</string>
    <string name="no_overview"></string>
    <string name="settings_title">Settings</string>
    <string name="setting_sort_header">Sort By</string>
    <string name="settings_sort_key" translatable="false">sort_by</string>
    <string name="settings_sort_popular_header">Most Popular</string>
    <string name="settings_sort_popular" translatable="false">popular</string>
    <string name="settings_sort_toprated_header">Top Rated</string>
    <string name="settings_sort_toprated" translatable="false">top_rated</string>
    <string name="settings_sort_fav_header">Favorite</string>
    <string name="settings_sort_fav" translatable="false">favorite</string>
    <string name="background_image">Image</string>
    <string name="transition_image">transition_image</string>
</resources>
